# mandlebrot

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  examples.sh  flake.nix  mandlebrot.c
examples/: examples.sh
include/: color.h  cpu.h  fractal.h  mandlebrot.h
include/fractals/: mandlebrot.h
src/: color.c  cpu.c  fractal.c  main.c  mandlebrot.c  opencl.c
src/fractals/: mandlebrot.c  mandlebrot.cl
